bootcamp/with-ingress/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    role: backend
    app: bc_26
spec:
  replicas: 1

  selector:
    matchLabels:
      role: backend
      app: bc_26
  template:
    metadata:
      labels:
        role: backend
        app: bc_26
    spec:
      containers:
        - name: backend
          image: gnvsai2020/backend-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
