bootcamp/with-ingress/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    role: frontend
    app: bc_26
spec:
  replicas: 1

  selector:
    matchLabels:
      role: frontend
      app: bc_26
  template:
    metadata:
      labels:
        role: frontend
        app: bc_26
    spec:
      containers:
        - name: frontend
          image: gnvsai2020/frontend-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
