bootcamp/with-ingress/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    role: backend
    app: bc_26
spec:
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090

  selector:
    role: backend
    app: bc_26
