bootcamp/with-ingress/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    role: frontend
    app: bc_26
spec:
  ports:
    - port: 3000
      targetPort: 3000

  selector:
    role: frontend
    app: bc_26
