bootcamp/with-ingress/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    name: mysql-service
    app: bc_26
spec:
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    name: mysql-pod
    app: bc_26
